Remove all List.of